--- a/dotfiles/.config/hypr/conf/custom.conf
+++ b/dotfiles/.config/hypr/conf/custom.conf
@@ -25,3 +25,47 @@ env = SDL_VIDEODRIVER,wayland
 
 # Uncomment in case you have issues with screensharing
 # exec-once = ~/.config/hypr/scripts/xdg.sh
+
+
+#[
+#    {
+#        "key": "general:col.inactive_border",
+#        "value": "0xff5e5c64"
+#    },
+#    {
+#        "key": "general:border_size",
+#        "value": 2
+#    },
+#    {
+#        "key": "general:gaps_out",
+#        "value": 10.0
+#    },
+#    {
+#        "key": "general:gaps_in",
+#        "value": 5.0
+#    },
+#    {
+#        "key": "general:col.active_border",
+#        "value": "0xffffeba6"
+#    },
+#    {
+#        "key": "general:resize_on_border",
+#        "value": "true"
+#    },
+#    {
+#        "key": "input:sensitivity",
+#        "value": 0.2
+#    },
+#    {
+#        "key": "input:touchpad:natural_scroll",
+#        "value": false
+#    },
+#    {
+#        "key": "input:numlock_by_default",
+#        "value": "true"
+#    },
+#    {
+#        "key": "input:natural_scroll",
+#        "value": "true"
+#    }
+#]
