--- a/dotfiles/.config/hypr/conf/keybindings/default.conf
+++ b/dotfiles/.config/hypr/conf/keybindings/default.conf
@@ -9,7 +9,7 @@ $HYPRSCRIPTS = ~/.config/hypr/scripts
 $SCRIPTS = ~/.config/ml4w/scripts
 
 # Applications
-bind = $mainMod, RETURN, exec, ~/.config/ml4w/settings/terminal.sh    # Open the terminal
+# bind = $mainMod, RETURN, exec, ~/.config/ml4w/settings/terminal.sh    # Open the terminal
 bind = $mainMod, B, exec, ~/.config/ml4w/settings/browser.sh          # Open the browser
 bind = $mainMod, E, exec, ~/.config/ml4w/settings/filemanager.sh      # Open the filemanager
 bind = $mainMod CTRL, E, exec, ~/.config/ml4w/settings/emojipicker.sh # Open the emoji picker
@@ -57,7 +57,7 @@ bind = $mainMod CTRL, Q, exec, ~/.config/ml4w/scripts/wlogout.sh                
 bind = $mainMod SHIFT, W, exec, ~/.config/hypr/scripts/waypaper.sh --random                                         # Change the wallpaper
 bind = $mainMod CTRL, W, exec, ~/.config/hypr/scripts/waypaper.sh                                                   # Open wallpaper selector
 bind = $mainMod ALT, W, exec, $HYPRSCRIPTS/wallpaper-automation.sh                        # Start random wallpaper script
-bind = $mainMod CTRL, RETURN, exec, ~/.config/hypr/scripts/launcher.sh                    # Open application launcher
+bind = $mainMod , RETURN, exec, ~/.config/hypr/scripts/launcher.sh                    # Open application launcher
 bind = $mainMod CTRL, K, exec, $HYPRSCRIPTS/keybindings.sh                                # Show keybindings
 bind = $mainMod SHIFT, B, exec, ~/.config/waybar/launch.sh                                # Reload waybar
 bind = $mainMod CTRL, B, exec, ~/.config/waybar/toggle.sh                                 # Toggle waybar
@@ -134,4 +134,3 @@ bind = , XF86Tools, exec, flatpak run com.ml4w.settings                         
 
 bind = , code:238, exec, brightnessctl -d smc::kbd_backlight s +10
 bind = , code:237, exec, brightnessctl -d smc::kbd_backlight s 10-
-
