--- a/dotfiles/.config/hypr/conf/keyboard.conf
+++ b/dotfiles/.config/hypr/conf/keyboard.conf
@@ -4,10 +4,10 @@
 # -----------------------------------------------------
 
 input {
-    kb_layout = us
-    kb_variant = 
+    kb_layout = fr,fr
+    kb_variant = lafayette,
     kb_model =
-    kb_options =
+    kb_options = caps:swapescape,grp:win_space_toggle
     numlock_by_default = true
     follow_mouse = 1
     mouse_refocus=false
