--- a/dotfiles/.config/hypr/conf/workspaces/default.conf
+++ b/dotfiles/.config/hypr/conf/workspaces/default.conf
@@ -4,14 +4,16 @@
 # -----------------------------------------------------
 
 # Assigning workspace to a certain monitor. Below are just examples
-# workspace = 1, monitor:eDP-1
-# workspace = 2, monitor:eDP-1
-# workspace = 3, monitor:eDP-1
-# workspace = 4, monitor:eDP-1
-# workspace = 5, monitor:DP-2
-# workspace = 6, monitor:DP-2
-# workspace = 7, monitor:DP-2
-# workspace = 8, monitor:DP-2
+workspace = 1, monitor:eDP-1
+workspace = 2, monitor:eDP-1
+workspace = 3, monitor:eDP-1
+workspace = 4, monitor:eDP-1
+workspace = 5, monitor:eDP-1
+workspace = 6, monitor:HDMI-A-1
+workspace = 7, monitor:HDMI-A-1
+workspace = 8, monitor:HDMI-A-1
+workspace = 9, monitor:HDMI-A-1
+workspace = 10, monitor:HDMI-A-1
 
 # Example rules (from https://wiki.hyprland.org/Configuring/Workspace-Rules/)
 # workspace = 3, rounding:false, decorate:false
