colors, input and restore waybar

--- a/dotfiles/.config/hypr/conf/custom.conf
+++ b/dotfiles/.config/hypr/conf/custom.conf
@@ -26,46 +26,14 @@ env = SDL_VIDEODRIVER,wayland
 # Uncomment in case you have issues with screensharing
 # exec-once = ~/.config/hypr/scripts/xdg.sh
 
+windowrule = workspace +1, class:^(org.mozilla.firefox)
 
-#[
-#    {
-#        "key": "general:col.inactive_border",
-#        "value": "0xff5e5c64"
-#    },
-#    {
-#        "key": "general:border_size",
-#        "value": 2
-#    },
-#    {
-#        "key": "general:gaps_out",
-#        "value": 10.0
-#    },
-#    {
-#        "key": "general:gaps_in",
-#        "value": 5.0
-#    },
-#    {
-#        "key": "general:col.active_border",
-#        "value": "0xffffeba6"
-#    },
-#    {
-#        "key": "general:resize_on_border",
-#        "value": "true"
-#    },
-#    {
-#        "key": "input:sensitivity",
-#        "value": 0.2
-#    },
-#    {
-#        "key": "input:touchpad:natural_scroll",
-#        "value": false
-#    },
-#    {
-#        "key": "input:numlock_by_default",
-#        "value": "true"
-#    },
-#    {
-#        "key": "input:natural_scroll",
-#        "value": "true"
-#    }
-#]
+general:col.inactive_border = rgba(ff5e5c64)
+general:col.active_border = rgba(ffffeba6)
+general:border_size = 2
+general:gaps_out = 10
+general:gaps_in = 5
+general:resize_on_border = true
+input:sensitivity = 0.2
+input:touchpad:natural_scroll = true
+input:numlock_by_default = true
