--- a/dotfiles/.config/hypr/conf/autostart.conf
+++ b/dotfiles/.config/hypr/conf/autostart.conf
@@ -10,8 +10,8 @@ exec-once=~/.config/ml4w/listeners.sh --startall
 # Start Polkit
 exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
-# Load Wallpaper
-exec-once = ~/.config/hypr/scripts/wallpaper-restore.sh
+# Load Bar
+exec-once = ~/.config/waybar/launch.sh
 
 # Load Notification Daemon
 exec-once = swaync
