--- a/dotfiles/.config/hypr/conf/custom.conf
+++ b/dotfiles/.config/hypr/conf/custom.conf
@@ -37,3 +37,4 @@ general:resize_on_border = true
 input:sensitivity = 0.2
 input:touchpad:natural_scroll = true
 input:numlock_by_default = true
+gestures:workspace_swipe = true
