--- a/dotfiles/.config/hypr/conf/keyboard.conf
+++ b/dotfiles/.config/hypr/conf/keyboard.conf
@@ -12,7 +12,7 @@ input {
     follow_mouse = 1
     mouse_refocus=false
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
         scroll_factor = 1.0  # Touchpad scroll factor
         disable_while_typing = false
     }
