--- a/dotfiles/.config/hypr/conf/keybindings/default.conf
+++ b/dotfiles/.config/hypr/conf/keybindings/default.conf
@@ -60,6 +60,7 @@ bind = $mainMod ALT, W, exec, $HYPRSCRIPTS/wallpaper-automation.sh              
 bind = $mainMod , RETURN, exec, ~/.config/hypr/scripts/launcher.sh                    # Open application launcher
 bind = $mainMod CTRL, K, exec, $HYPRSCRIPTS/keybindings.sh                                # Show keybindings
 bind = $mainMod SHIFT, B, exec, ~/.config/waybar/launch.sh                                # Reload waybar
+bind = $mainMod SHIFT, D, exec, ~/.config/nwg-dock-hyprland/launch.sh                                # Reload dock
 bind = $mainMod CTRL, B, exec, ~/.config/waybar/toggle.sh                                 # Toggle waybar
 bind = $mainMod SHIFT, R, exec, $HYPRSCRIPTS/loadconfig.sh                                # Reload hyprland config
 bind = $mainMod, V, exec, $SCRIPTS/cliphist.sh                                            # Open clipboard manager
