--- a/dotfiles/.config/hypr/conf/autostart.conf
+++ b/dotfiles/.config/hypr/conf/autostart.conf
@@ -10,8 +10,9 @@ exec-once=~/.config/ml4w/listeners.sh --startall
 # Start Polkit
 exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
-# Load Bar
+# Load Bar and dock
 exec-once = ~/.config/waybar/launch.sh
+exec-once = ~/.config/nwg-dock-hyprland/launch.sh &
 
 # Load Notification Daemon
 exec-once = swaync
