better dock (not sure about the margin with the monitor)

--- a/dotfiles/.config/hypr/conf/custom.conf
+++ b/dotfiles/.config/hypr/conf/custom.conf
@@ -31,9 +31,12 @@ windowrule = workspace +1, class:^(org.mozilla.firefox)
 general:col.inactive_border = rgba(5e5c64ff)
 general:col.active_border = rgba(ffeba6ff)
 general:border_size = 2
-general:gaps_out = 10
+general:gaps_out = 5, 10, 5, 10
 general:gaps_in = 5
 general:resize_on_border = true
-input:sensitivity = 0.2
+input:sensitivity = 0.3
 input:numlock_by_default = true
 gestures:workspace_swipe = true
+
+layerrule = ignorezero, waybar
+layerrule = ignorezero, nwg-dock
