--- a/dotfiles/.config/hypr/conf/custom.conf
+++ b/dotfiles/.config/hypr/conf/custom.conf
@@ -37,6 +37,7 @@ general:resize_on_border = true
 input:sensitivity = 0.3
 input:numlock_by_default = true
 gestures:workspace_swipe = true
+decoration:rounding = 7
 
 layerrule = ignorezero, waybar
 layerrule = ignorezero, nwg-dock
